Update build command
There appears to be a difference in the build arg if running
with nix or on nixos.

https://discourse.nixos.org/t/proper-way-to-build-a-remote-system-with-flakes/17661/11

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       - run: nix flake check
-      - run: nix build .#nixosConfigurations.vm-intel
+      - run: nix build .#nixosConfigurations.vm-intel.config.system.build.toplevel
       - uses: actions/upload-artifact@v2
         with:
           name: vmware
