Attempting to fix a build
I do not under this yet, trying to get the build
command to work. I saw this in a nixos output..

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -19,4 +19,4 @@ jobs:
           name: jwieringa-nixos-config
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix flake check
-      - run: nix build .#nixosConfigurations.vm-aarch64.config.system.build.toplevel
+      - run: nix build .#nixosConfigurations."vm-aarch64".config.system.build.toplevel
