--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest-arm
     steps:
       - uses: actions/checkout@v4.2.2
       - uses: cachix/install-nix-action@v31
